--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+title: Juan Chen's Homepage
+page-top-title: Juan Chen
+top-section-bg-text: Artificial Intelligence
+home-subtitle: Juan Chen&ensp;|&ensp;陈铭辉
+copyright-text: '&copy; Juan Chen 2025-2026. All Rights Reserved.'
